frontend/src/index.css
:root {
  /* Color themse */
  --primary: #013440;
  --secondary: #bbddf2;
  --third: #e4ebf2;
  --fourth: #242526;
}

* {
  margin: 0;
  padding: 0;
}

.navSuggestions {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 100%;
  left: 0;
  width: 100%;
  color: black;
  background-color: #bbddf2;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
  border-radius: 4px;
  max-height: 65px;
  overflow-y: scroll;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.searchLink {
    color: black;
    text-decoration: none;
}
.searchLink:hover {
    background-color: #01344063;
}

